Read only changes

--- a/Frontend/src/app/place-procurement-request-create-details/place-procurement-request-create-details.component.html
+++ b/Frontend/src/app/place-procurement-request-create-details/place-procurement-request-create-details.component.html
@@ -16,7 +16,7 @@
             </div>
             <div class="col-7">
                 <mat-form-field appearance="fill">
-                    <input matInput placeholder="Buyer Name" formControlName="BuyerName" readonly [disabled]="" (focus)="onFocus($event)" style="cursor: default">
+                    <input matInput placeholder="Buyer Name" formControlName="BuyerName" readonly (focus)="onFocus($event)" style="cursor: default; color: gray;">
                   </mat-form-field>
             </div>
         </div>
@@ -26,7 +26,7 @@
             </div>
             <div class="col-7">
                 <mat-form-field appearance="fill">
-                    <input matInput placeholder="Buyer Email" formControlName="BuyerEmail" readonly [disabled]="" (focus)="onFocus($event)" style="cursor: default">
+                    <input matInput placeholder="Buyer Email" formControlName="BuyerEmail" readonly (focus)="onFocus($event)" style="cursor: default; color: gray;">
                    </mat-form-field>
             </div>
         </div>
