--- a/Frontend/src/app/view-employee/view-employee.component.css
+++ b/Frontend/src/app/view-employee/view-employee.component.css
@@ -160,11 +160,12 @@ button {
 
     button:focus {
       outline: none;
-    }      
-
-
-    .MenuButton{
-      background-color:#fff;
-      color: #000; 
-      width: 200px;
     }
+
+
+.MenuButton {
+  background-color: #fff;
+  color: #000;
+  width: 200px;
+  border-radius: 0px;
+}
