--- a/Frontend/src/app/view-prdetails-expanded/view-prdetails-expanded.component.html
+++ b/Frontend/src/app/view-prdetails-expanded/view-prdetails-expanded.component.html
@@ -5,7 +5,7 @@
             <h1 style="margin-left: 1%; margin-top:1%; color: #244688; font-weight:700; font-size:32pt;">
                 View Procurement Details
             </h1>
-            <mat-icon aria-hidden="false" aria-label="admin icon" fontIcon="help"
+            <mat-icon (click)="openViewProcurementDetailsTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
                 style="font-size:30pt; height: 37px; width: 37px; margin-left: 1px;" [ngStyle]="{'color':'#244688'}"
                 matTooltip="Need help? Click me!"></mat-icon>
         </div>
