--- a/Frontend/src/app/Delegation/view-delegation/view-delegation.component.html
+++ b/Frontend/src/app/Delegation/view-delegation/view-delegation.component.html
@@ -113,17 +113,24 @@
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let row" style="width:100px;">
-            <button class="noselect" type="button" style="background-color: #94CC5B;"
-              [routerLink]="['/EditDelegation', row.delegation_ID]">
-              <span class='text'>Edit</span>
-              <span class="icon" style="border-left: 1px solid #94CC5B; ">
-                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
-                  <!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                  <path
-                    d="M362.7 19.3L314.3 67.7 444.3 197.7l48.4-48.4c25-25 25-65.5 0-90.5L453.3 19.3c-25-25-65.5-25-90.5 0zm-71 71L58.6 323.5c-10.4 10.4-18 23.3-22.2 37.4L1 481.2C-1.5 489.7 .8 498.8 7 505s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L421.7 220.3 291.7 90.3z" />
-                </svg>
-              </span>
+            <button class="noselect" type="button" style="background-color: rgba(148, 204, 91, 0.5); cursor:default;" *ngIf="row.delegation_Status.name === 'Active'; else NotDisabled"
+                    [routerLink]="['/EditDelegation', row.delegation_ID]" disabled>
+              <span class='text' style="color: #00000064">Edit</span>
+              
             </button>
+
+            <ng-template #NotDisabled>
+              <button class="noselect" type="button" style="background-color: #94CC5B;"
+                      [routerLink]="['/EditDelegation', row.delegation_ID]">
+                <span class='text'>Edit</span>
+                <span class="icon" style="border-left: 1px solid #94CC5B; ">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
+                    <!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                    <path d="M362.7 19.3L314.3 67.7 444.3 197.7l48.4-48.4c25-25 25-65.5 0-90.5L453.3 19.3c-25-25-65.5-25-90.5 0zm-71 71L58.6 323.5c-10.4 10.4-18 23.3-22.2 37.4L1 481.2C-1.5 489.7 .8 498.8 7 505s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L421.7 220.3 291.7 90.3z" />
+                  </svg>
+                </span>
+              </button>
+            </ng-template>
           </td>
         </ng-container>
 
