Ionic Frontend file changes

--- a/IonicFrontend/Procionic/src/app/view-procurement-request/view-procurement-request.page.html
+++ b/IonicFrontend/Procionic/src/app/view-procurement-request/view-procurement-request.page.html
@@ -28,7 +28,7 @@
       <ion-button fill="clear" (click)="EditRequest(request.procurement_Request_ID) ">
         <ion-icon slot="icon-only" name="create-outline"></ion-icon>
       </ion-button>
-      <ion-button fill="clear" (click)="DeleteRequest(request.procurement_Request_ID)">
+      <ion-button fill="clear" (click)="DeleteRequest(request.procurement_Request_ID, request.name)">
         <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
       </ion-button>
 
