--- a/Frontend/src/app/Settings/backupDialog/restore.component.html
+++ b/Frontend/src/app/Settings/backupDialog/restore.component.html
@@ -1,10 +1,11 @@
-<div style="color: white; background-color: #244688; text-align: center; display: flex; justify-content: center; align-items: center;">
-  <h1 mat-dialog-title style="color: white;"
-      *ngIf="showConfirmationDialog == true">
+<div
+  style="color: white; background-color: #244688; text-align: center; display: flex; justify-content: center; align-items: center;">
+  <h1 mat-dialog-title style="color: white;" *ngIf="showConfirmationDialog == true">
     BACKUP SYSTEM DATA
   </h1>
   <mat-icon (click)="openBackupTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
-            style="font-size: 24pt; height: 37px; width: 37px; margin-bottom: 5px; cursor: pointer;" [ngStyle]="{'color':'white'}" matTooltip="Need help? Click me!"></mat-icon>
+    style="font-size: 24pt; height: 37px; width: 37px; margin-bottom: 5px; cursor: pointer;"
+    [ngStyle]="{'color':'white'}" matTooltip="Need help? Click me!"></mat-icon>
 </div>
 
 
@@ -16,13 +17,7 @@
   <mat-spinner></mat-spinner>
 </div>
 <div mat-dialog-actions align="end" *ngIf="showConfirmationDialog == true">
-  <button mat-raised-button (click)="onConfirm()" [disabled]="isLoading" style="color: white; background-color: #94CC5B;"  >Yes</button>
+  <button mat-raised-button (click)="onConfirm()" [disabled]="isLoading"
+    style="color: white; background-color: #94CC5B;">Yes</button>
   <button mat-raised-button (click)="onCancel()" style="color: white; background-color: #244688;">Cancel</button>
 </div>
-
-<ng-container *ngIf="showSuccessDialog == true">
-  <h1 mat-dialog-title style="color: white; background-color: #244688; text-align: center;">Backup Successful</h1>
-  <div mat-dialog-content>
-    <p>The Backup  has been <strong style="color:#94CC5B">CREATED</strong> successfully.</p>
-  </div>
-</ng-container>
