--- a/Frontend/src/app/view-employee/view-employee.component.html
+++ b/Frontend/src/app/view-employee/view-employee.component.html
@@ -150,31 +150,53 @@
           </td>
         </ng-container>
 
-        <ng-container matColumnDef="delete">
-          <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let Employees" style="width:140px;">
-            <!--<button id="DeleteButton" mat-raised-button
-          style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%;"
-          (click)="DeleteEmployee(Employees.user_Id)"><mat-icon matPrefix
-            style="margin-right:10%;">delete</mat-icon>Delete</button>-->
 
-            <button class="noselect"
-                    (click)="DeleteEmployee(Employees.user_Id, Employees.employeeID, Employees.user.username)">
-              <span class='text'>Delete</span>
-              <span class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
-                  <!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                  <style>
-                    svg {
-                      fill: #000000
-                    }
-                  </style>
-                  <path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
-                </svg>
-              </span>
-            </button>
-          </td>
-        </ng-container>
+          <ng-container matColumnDef="delete">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let Employees" style="width:140px;">
+              <!--<button id="DeleteButton" mat-raised-button
+      style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%;"
+      (click)="DeleteEmployee(Employees.user_Id)"><mat-icon matPrefix
+        style="margin-right:10%;">delete</mat-icon>Delete</button>-->
+              <div *ngIf="iUserID == Employees.user_Id; else DeleteElse">
+                <button class="noselect"
+                        (click)="DeleteEmployee(Employees.user_Id, Employees.employeeID, Employees.user.username)" disabled>
+                  <span class='text'>Delete</span>
+                  <span class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
+                      <!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                      <style>
+                        svg {
+                          fill: #000000
+                        }
+                      </style>
+                      <path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
+                    </svg>
+                  </span>
+                </button>
+              </div>
+              <ng-template #DeleteElse>
+                <button class="noselect"
+                        (click)="DeleteEmployee(Employees.user_Id, Employees.employeeID, Employees.user.username)">
+                  <span class='text'>Delete</span>
+                  <span class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
+                      <!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                      <style>
+                        svg {
+                          fill: #000000
+                        }
+                      </style>
+                      <path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
+                    </svg>
+                  </span>
+                </button>
+              </ng-template>
+            </td>
+          </ng-container>
+
+
+        
 
         <tr mat-header-row *matHeaderRowDef="displayedColumnsMD" style="background-color:#244688;"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumnsMD;"></tr>
@@ -261,26 +283,40 @@
           <ng-container matColumnDef="delete">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let Employees" style="width:140px;">
-              <!--<button id="DeleteButton" mat-raised-button
-        style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%;"
-        (click)="DeleteEmployee(Employees.user_Id)"><mat-icon matPrefix
-          style="margin-right:10%;">delete</mat-icon>Delete</button>-->
-
-              <button class="noselect"
-                      (click)="DeleteEmployee(Employees.user_Id, Employees.employeeID, Employees.user.username)">
-                <span class='text'>Delete</span>
-                <span class="icon">
-                  <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
-                    <!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                    <style>
-                      svg {
-                        fill: #000000
-                      }
-                    </style>
-                    <path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
-                  </svg>
-                </span>
-              </button>
+              <div *ngIf="iUserID == Employees.user_Id; else DeleteElse">
+                <button class="noselect"
+                        (click)="DeleteEmployeeErrorNotification()">
+                  <span class='text'>Delete</span>
+                  <span class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
+                      <!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                      <style>
+                        svg {
+                          fill: #000000
+                        }
+                      </style>
+                      <path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
+                    </svg>
+                  </span>
+                </button>
+              </div>
+              <ng-template #DeleteElse>
+                <button class="noselect"
+                        (click)="DeleteEmployee(Employees.user_Id, Employees.employeeID, Employees.user.username)">
+                  <span class='text'>Delete</span>
+                  <span class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
+                      <!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                      <style>
+                        svg {
+                          fill: #000000
+                        }
+                      </style>
+                      <path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
+                    </svg>
+                  </span>
+                </button>
+              </ng-template>
             </td>
           </ng-container>
 
